--- a/[Source] Toontown Rewritten Bot/ToonTown Rewritten Bot/ToonTown Rewritten Bot.csproj
+++ b/[Source] Toontown Rewritten Bot/ToonTown Rewritten Bot/ToonTown Rewritten Bot.csproj
@@ -93,6 +93,7 @@
       <DependentUpon>AboutBox1.cs</DependentUpon>
     </Compile>
     <Compile Include="BotFunctions.cs" />
+    <Compile Include="DoodleTraining.cs" />
     <Compile Include="Fishing.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
