--- a/[Source] Toontown Rewritten Bot/ToonTown Rewritten Bot/ToonTown Rewritten Bot.csproj
+++ b/[Source] Toontown Rewritten Bot/ToonTown Rewritten Bot/ToonTown Rewritten Bot.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Help.Designer.cs">
       <DependentUpon>Help.cs</DependentUpon>
     </Compile>
+    <Compile Include="imageRecognition.cs" />
     <Compile Include="Misc.cs" />
     <Compile Include="Plants.cs">
       <SubType>Form</SubType>
@@ -152,11 +153,18 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Racing.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="UpdateCoordsHelper.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="UpdateCoordsHelper.Designer.cs">
       <DependentUpon>UpdateCoordsHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UpdateImages.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UpdateImages.Designer.cs">
+      <DependentUpon>UpdateImages.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="AboutBox1.resx">
       <DependentUpon>AboutBox1.cs</DependentUpon>
@@ -180,6 +188,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UpdateCoordsHelper.resx">
       <DependentUpon>UpdateCoordsHelper.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UpdateImages.resx">
+      <DependentUpon>UpdateImages.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\app.manifest" />
