--- a/ToonTown Rewritten Bot/ToonTown Rewritten Bot.csproj
+++ b/ToonTown Rewritten Bot/ToonTown Rewritten Bot.csproj
@@ -1,16 +1,17 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
-    <TargetFramework>net7.0-windows</TargetFramework>
+    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <ProjectGuid>{914AF6DE-BAB5-4DCA-A974-558FC1DD973B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-<<<<<<< HEAD:ToonTown Rewritten Bot/ToonTown Rewritten Bot.csproj
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ToonTown_Rewritten_Bot</RootNamespace>
     <AssemblyName>ToonTown Rewritten Bot</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-=======
->>>>>>> 26d8c76 (- Upgraded the project to target framework .net 7):[Source] Toontown Rewritten Bot/ToonTown Rewritten Bot/ToonTown Rewritten Bot.csproj
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
@@ -27,7 +28,6 @@
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-<<<<<<< HEAD:ToonTown Rewritten Bot/ToonTown Rewritten Bot.csproj
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <TargetFrameworkProfile />
@@ -51,11 +51,6 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-=======
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <UseWindowsForms>true</UseWindowsForms>
-    <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
->>>>>>> 26d8c76 (- Upgraded the project to target framework .net 7):[Source] Toontown Rewritten Bot/ToonTown Rewritten Bot/ToonTown Rewritten Bot.csproj
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Converted_file_e317bd25.ico</ApplicationIcon>
@@ -88,7 +83,6 @@
     <Reference Include="InputSimulator">
       <HintPath>..\..\..\..\..\Desktop\InputSimulator.dll</HintPath>
     </Reference>
-<<<<<<< HEAD:ToonTown Rewritten Bot/ToonTown Rewritten Bot.csproj
     <Reference Include="Microsoft.Dynamic, Version=1.2.3.0, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL">
       <HintPath>..\packages\DynamicLanguageRuntime.1.2.3\lib\net45\Microsoft.Dynamic.dll</HintPath>
     </Reference>
@@ -228,8 +222,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-=======
->>>>>>> 26d8c76 (- Upgraded the project to target framework .net 7):[Source] Toontown Rewritten Bot/ToonTown Rewritten Bot/ToonTown Rewritten Bot.csproj
   </ItemGroup>
   <ItemGroup>
     <Content Include="Converted_file_e317bd25.ico" />
@@ -260,7 +252,6 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-<<<<<<< HEAD:ToonTown Rewritten Bot/ToonTown Rewritten Bot.csproj
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Emgu.CV.runtime.windows.4.3.0.3890\build\Emgu.CV.runtime.windows.targets" Condition="Exists('..\packages\Emgu.CV.runtime.windows.4.3.0.3890\build\Emgu.CV.runtime.windows.targets')" />
@@ -279,16 +270,4 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-=======
-  <ItemGroup>
-    <PackageReference Include="InputSimulatorEx" Version="2.1.1" />
-    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
-    <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.4.410601">
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Windows.Compatibility" Version="7.0.0" />
-    <PackageReference Include="WindowsInput" Version="6.4.0" />
-  </ItemGroup>
->>>>>>> 26d8c76 (- Upgraded the project to target framework .net 7):[Source] Toontown Rewritten Bot/ToonTown Rewritten Bot/ToonTown Rewritten Bot.csproj
 </Project>
