--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 */**/obj/Release
 .vs/
 */**/obj/
+/ToonTown Rewritten Bot/obj/project.assets.json
+/ToonTown Rewritten Bot/obj/project.nuget.cache
+/ToonTown Rewritten Bot/obj/ToonTown Rewritten Bot.csproj.nuget.dgspec.json
+/ToonTown Rewritten Bot/obj/ToonTown Rewritten Bot.csproj.nuget.g.props
