Fix Reset All Coords Error #14

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /ToonTown Rewritten Bot/obj/project.nuget.cache
 /ToonTown Rewritten Bot/obj/ToonTown Rewritten Bot.csproj.nuget.dgspec.json
 /ToonTown Rewritten Bot/obj/ToonTown Rewritten Bot.csproj.nuget.g.props
+/ToonTown Rewritten Bot/Properties/PublishProfiles
