Custom Actions for Fishing & Golf Complete
- Completed the custom actions for fishing & golf functionality wise. Probably still has/needs some improvements
- Refactored some code to remove boilerplate code & renaming
- Added embedded default golfing json actions

--- a/ToonTown Rewritten Bot/Services/CustomGolfActions/EASY - Afternoon Tee.json
+++ b/ToonTown Rewritten Bot/Services/CustomGolfActions/EASY - Afternoon Tee.json
@@ -1,7 +1,7 @@
 [
   {
-    "Action": "TIME",
-    "Command": "TIME",
+    "Action": "DELAY TIME",
+    "Command": "DELAY TIME",
     "Duration": 15000
   },
   {
