Add advanced image recognition and OCR tools
Integrate Tesseract OCR for reading text/numbers from game screenshots, with automatic tessdata download. Add template matching utilities for finding UI elements via image search. Introduce a debug window for capturing screenshots, creating/loading templates, running template matching, and testing OCR with a user-friendly UI. Update MainForm to provide access to these new tools. Enhance screenshot reliability using PrintWindow API. Update project files for Tesseract support.

--- a/ToonTown Rewritten Bot/ToonTown Rewritten Bot.csproj
+++ b/ToonTown Rewritten Bot/ToonTown Rewritten Bot.csproj
@@ -130,5 +130,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="10.0.0-preview.1.25080.4" />
+    <!-- Tesseract OCR for reading text/numbers from the game -->
+    <PackageReference Include="Tesseract" Version="5.2.0" />
   </ItemGroup>
 </Project>
