Add image recognition system for UI element detection
Introduced UIElementManager for template-based image recognition of UI elements, with manual coordinate fallback. Added TemplateCaptureForm for user-friendly template creation. Refactored fishing automation to use image recognition by default. Updated project structure to include Templates folder and assets. Improved reliability and maintainability of UI automation.

--- a/ToonTown Rewritten Bot/ToonTown Rewritten Bot.csproj
+++ b/ToonTown Rewritten Bot/ToonTown Rewritten Bot.csproj
@@ -133,4 +133,8 @@
     <!-- Tesseract OCR for reading text/numbers from the game -->
     <PackageReference Include="Tesseract" Version="5.2.0" />
   </ItemGroup>
+  <!-- Copy Templates folder to output directory -->
+  <ItemGroup>
+    <None Include="Templates\**\*" CopyToOutputDirectory="PreserveNewest" LinkBase="Templates" />
+  </ItemGroup>
 </Project>
