Add GitHub Actions release workflow and single-file publish
Added release.yml workflow to automate build and GitHub release for ToonTown Rewritten Bot, including Tesseract data and required folders. Updated .csproj to enable single-file, self-contained, and compressed publish by default.

--- a/ToonTown Rewritten Bot/ToonTown Rewritten Bot.csproj
+++ b/ToonTown Rewritten Bot/ToonTown Rewritten Bot.csproj
@@ -25,6 +25,10 @@
     <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
     <!-- Suppress platform compatibility warnings since this is a Windows-only app -->
     <NoWarn>$(NoWarn);CA1416</NoWarn>
+    <!-- Single-file publish settings (applied during dotnet publish) -->
+    <PublishSingleFile>true</PublishSingleFile>
+    <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+    <EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <UseVSHostingProcess>true</UseVSHostingProcess>
